# flow

./: .gitignore  CLAUDE.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  flow  install.sh  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
github/: README.md
linux/: Makefile  PKGBUILD  README.md  flow.desktop  nfpm.yaml
linux/appimage/: build-appimage.sh
macos/: README.md  flow.rb
packaging/aur/: PKGBUILD
packaging/homebrew/: flow.rb
tools/: blocker_test.py  feature_test.py  help_test.py  render_test.py  stats_test.py  view_test.py
windows/: README.md
