# Packaging metadata for flow — a single-file, zero-dependency terminal focus app.
#
# `flow` is a plain Python script (stdlib + curses only), so packaging is just
# metadata: setup.py installs the `flow` script verbatim (shebang + all) and pip
# generates the right launcher per OS (a `flow` shim on Linux/macOS, `flow.exe`
# on Windows). There is nothing to compile and no runtime dependencies.
#
# Install from a checkout:   pip install .
# Build distributables:      python -m build      (produces wheel + sdist)

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtui"
version = "1.0.0"
description = "A mouse-first terminal focus app: Pomodoro timer, nested todos, habit tracker, ambient audio and an app blocker — one file, zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Suvadeep Mondal", email = "suvadeep.apc@gmail.com" }]
keywords = ["pomodoro", "tui", "curses", "focus", "productivity", "habit-tracker", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
# No Python dependencies. Optional *system* tools (mpv, paplay, cava, zenity…)
# are detected at runtime and the app degrades gracefully without them.
dependencies = []

[project.urls]
Homepage = "https://github.com/thepathless/flow"
Repository = "https://github.com/thepathless/flow"
Issues = "https://github.com/thepathless/flow/issues"

# `flow` is a standalone script (installed via setup.py `scripts=`), not an
# importable package. Disable setuptools' flat-layout auto-discovery so stray
# top-level dirs (e.g. tools/) are never mistaken for packages to build.
[tool.setuptools]
packages = []
py-modules = []
